[gd_scene load_steps=4 format=3 uid="uid://bsovmcxdmyrmq"]

[ext_resource type="Script" uid="uid://cm8vj8kvqcfey" path="res://Scripts/area_3d.gd" id="1_c6c7x"]
[ext_resource type="PackedScene" uid="uid://ca37n3a2ii5u4" path="res://Assets/Blue_gem/blue_gem.glb" id="2_v8yb0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_c6c7x"]
size = Vector3(0.7, 0.7, 0.6)

[node name="Blue_gem" type="Node3D"]

[node name="Area3D" type="Area3D" parent="."]
script = ExtResource("1_c6c7x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.025, 0.285, -0.025)
shape = SubResource("BoxShape3D_c6c7x")

[node name="blue_gem" parent="Area3D" instance=ExtResource("2_v8yb0")]

[node name="BlueLabel" type="Label3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.53159, 4.09893, 0)
pixel_size = 0.02
text = "Press E to deminish
Press Q to return size"

[connection signal="body_entered" from="Area3D" to="Area3D" method="_on_body_entered"]
